@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Hazard curves/maps/uniform spectra can now be recomputed on the fly
   * `oq engine --run job.ini --exports csv` now also exports the realizations
   * Introduced the format NRML 0.5 for source models
   * Added a check on the version in case of export errors
